<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E2D9"
    tools:context=".GideFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3E2D9">

        <LinearLayout
            android:id="@+id/linear_layout_gide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="#E3E2D9"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/manual_field_1"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_2"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="20dp"
                android:background="#452610"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_manual_1"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_gravity="top"
                    android:foregroundGravity="top"
                    android:src="@drawable/manual_image_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:text="@string/manual_field_3"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:text="@string/manual_field_4"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_5"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#452610"
                android:fontFamily="@font/roboto"
                android:text="@string/manual_field_6"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#452610"
                android:fontFamily="@font/roboto"
                android:text="@string/manual_field_7"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_8"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#452610"
                android:fontFamily="@font/roboto"
                android:text="@string/manual_field_9"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView_manual_2"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/manual_image_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_10"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView_manual_3"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:elevation="2dp"
                android:src="@drawable/manual_image_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_11"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView_manual_4"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/manual_image_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_12"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView_manual_5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/manual_image_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/manual_field_13"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView_manual_6"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/manual_image_6" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>